--- a/style.css
+++ b/style.css
@@ -1,44 +1,46 @@
-@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
-.bg-container {
-    background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/chatbg.png");
-    height: 700px;
-    width: 380px;
-    border-radius: 25px;
+conference_page {
+    height: 100vh;
+    width: 100vw;
 }
 
-.main-heading {
+.conference_image {
+    height: 40vh;
+    width: 100vw;
+}
+
+.container1 {
     text-align: center;
-    background-color: #323f4b;
-    color: #ffffff;
+    padding: 20px;
+}
+
+.heading {
+    color: #183b56;
+    font-size: 32px;
+    padding: 16px;
+}
+
+.paragraph {
+    color: #5a7184;
+    font-weight: 500;
+}
+
+.margin1 {
+    margin-left: 45px;
+}
+
+.margin2 {
+    margin-right: 45px;
+}
+
+.h1 {
+    font-size: 26px;
+    font-weight: bold;
     font-family: "Roboto";
-    font-size: 20px;
-    padding: 18px;
-    border-top-right-radius: 25px;
-    border-top-left-radius: 25px;
+    color: #183b56;
 }
 
-.message-container {
-    padding: 25px;
-}
-
-.message-text {
-    color: #ffffff;
-    font-family: "Roboto";
-    padding: 10px;
-}
-
-.message-received {
-    background-color: #52606d;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
-}
-
-.message-sent {
-    background-color: #47a3f3;
-    text-align: right;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-    border-bottom-left-radius: 8px;
+.p {
+    color: #5a7184;
 }
